# Accession

./: .env.example  .gitignore  Dockerfile  add_columns_and_insert.py  alembic.ini  generate_hash.py  insert_admin_direct.py  insert_break_glass_admin.sql  pyproject.toml  requirements.txt  run_migrations.ps1  setup.py  startup.sh  test_login.json
.github/workflows/: deploy-to-azure.yml
alembic/: env.py
alembic/versions/: 20251202_1649_6f256120fb1b_add_facility_matching_tables.py  20251202_2038_a3830c218d66_add_extraction_batches_table.py  20251204_1930_add_break_glass_columns.py  20251205_2010_add_workstation_tables.py  20251205_2130_add_scan_columns_to_documents.py  20251209_add_training_columns.py  20251212_add_user_photo_url.py
app/: __init__.py  config.py  database.py  main.py
app/middleware/: __init__.py  audit.py  auth.py  security.py
app/models/: __init__.py  audit_log.py  code_audit.py  document.py  extraction_batch.py  facility.py  facility_match_log.py  (+10 more)
docs/: ACCESSION_DEV_RESOURCES.md  AZURE_SETUP.md  COMPLIANCE_ASSESSMENT.md  COMPLIANCE_SUMMARY.md  DATABASE_SCHEMA.md  DEPLOYED_RESOURCES.md  FUTURE.md  HIPAA_REMEDIATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MULTIPLE_UPLOAD_AND_ID_SETUP.md  PLAN.md
infrastructure/: Dockerfile  azure-deploy.json  azure-pipelines.yml  docker-compose.yml
prompts/: README.md  extraction_prompt.txt  mvd_veterinary_tests.json  output_format.txt  system_prompt.txt  test_specimen_volumes.json  user_prompt.txt
scripts/: Setup-EntraIdAuth.ps1  add_entra_id_fields.py  add_entra_id_fields_azure.py  bulk_import_facilities.py  clear_and_reseed_tests.py  clear_documents.py  create_test_user.py  fix_blob_name_nullable.py  import_facilities.py  reset_document_id.py  reset_test_tables.py  restart_fresh.ps1  seed_break_glass_admin.py  seed_species.py  seed_test_catalog.py  seed_tests.py  seed_user.py  setup_db_user.py  setup_managed_identity_sql.sql  test_azure_openai.py  test_login.py  view_document.py
tests/: __init__.py  conftest.py  test_api.py  test_audit.py  test_encryption.py  test_validation.py
(+963 files in other folders)
